--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <h1 id="title">freecodecamp survey form</h1>
+  <h1 id="title">Apizcode survey form</h1>
   <p id="description">Thank you for taking the time to help us improve the platform</p>
   <form action="" id="survey-form">
     <div class="form-div">
@@ -32,7 +32,7 @@
       </select>
     </div>
     <div class="form-div">
-      <label id="label-radio">Would you recommend freeCodeCamp to a friend?</label>
+      <label id="label-radio">Would you recommend Apizcode to a friend?</label>
     </div>
     <div class="form-radio">
       <label id="definitely"><input type="radio" value="definitely" name="recommend">Definitely</label>
@@ -44,7 +44,7 @@
       <label id="notsure"><input type="radio" value="definitely" name="recommend">Not Sure</label>
     </div>
     <div class="form-div">
-      <label id="dropdown-label-feature">What is your favorite feature of freeCodeCamp?</label>
+      <label id="dropdown-label-feature">What is your favorite feature of Apizcode?</label>
       <select id="dropdown-feature" name="dropdown-feature">
         <option value="">Select an option</option>
         <option value="1">Challenges</option>
@@ -88,6 +88,9 @@
     </div>
     <div class="div-checkbox"> 
       <input type="checkbox" name="improvement" value="11"><label>Additional Courses</label>  
+    </div>
+    <div class="div-checkbox"> 
+      <input type="checkbox" name="improvement" value="12"><label>Games</label>  
     </div>
     <br/>
     <div class= "form-div">
